--- a/shippable.yml
+++ b/shippable.yml
@@ -4,7 +4,23 @@ node_js:
   - "0.10.29"
 
 addons:
-  firefox: "23.0"
+ # firefox: "23.0"
+  #firefox: "17.0"
+#firefox: "18.0"
+#firefox: "19.0"
+#firefox: "20.0"
+#firefox: "21.0"
+#firefox: "22.0"
+# firefox: "23.0"
+#firefox: "24.0"
+#firefox: "25.0"
+#firefox: "26.0"
+#firefox: "27.0"
+#firefox: "29.0"
+#firefox: "28.0"
+#firefox: "32.0"
+#firefox: "31.0"
+firefox: "30.0"
 
 services:
   - selenium
