--- a/shippable.yml
+++ b/shippable.yml
@@ -28,6 +28,7 @@ services:
 before_script:
   - "export DISPLAY=:99.0"
   - "/etc/init.d/xvfb start"
+  - firefox --version
 
 script:
   - echo $var
