--- a/shippable.yml
+++ b/shippable.yml
@@ -18,8 +18,8 @@ addons:
    #  firefox: "26.0"
      #firefox: "27.0"
    # firefox: "29.0"
-    firefox: "28.0"
-    #firefox: "32.0"
+    #firefox: "28.0"
+    firefox: "32.0"
    #firefox: "31.0"
   #firefox: "30.0"
 
@@ -31,5 +31,6 @@ before_script:
   - "/etc/init.d/xvfb start"
   - firefox --version
 
-
+notifications:
+  email: false
 
