--- a/shippable.yml
+++ b/shippable.yml
@@ -4,6 +4,7 @@ node_js:
   - "0.10"
 
 addons:
+    firefox: "30.0"
   # firefox: "23.0"
    #firefox: "17.0"
   # firefox: "18.0"
@@ -21,7 +22,7 @@ addons:
     #firefox: "28.0"
    # firefox: "32.0"
     #firefox: "31.0"
-    firefox: "30.0"
+   # firefox: "30.0"
 
 services:
   - selenium
